# text-to-sql-demo

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  superstore.db
core/: database.py  llm_client.py  notebook.py  session_manager.py
models/: schemas.py
utils/: helpers.py
